Create left column

--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
     <title>Sujeitogram - Sua rede social</title>
 </head>
 <body>
-    <h1>Teste</h1>
+    <div id="wrapper">
+        <div id="container">
+            <div class="column left">
+                <div class="main">
+                    
+                </div>
+            </div>
+            <div class="column right">
+                
+            </div>
+        </div>
+    </div>
 </body>
 </html>
