Create app session

--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
                 <div class="infobox">
                     <p>Não possui uma conta? <a href="#">Cadastre-se</a></p>
                 </div>
+
+                <div class="get-app-panel">
+                    <p>Obtenha o aplicativo.</p>
+                    <div class="app-buttons">
+                        <a href="#"><img class="img-appstore" src="./assets/appstore.png" alt="Logo da apple"></a>
+                        <a href="#"><img class="img-googleplay" src="./assets/googleplay.png" alt="Logo da google play"></a>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
