--- a/index.html
+++ b/index.html
@@ -40,6 +40,24 @@
                 </div>
             </div>
         </div>
+        <footer>
+            <div class="footer-inner">
+                <a href="#">About us</a>
+                <a href="#">Suport</a>
+                <a href="#">Blog</a>
+                <a href="#">Press</a>
+                <a href="#">Jobs</a>
+                <a href="#">Privacy</a>
+                <a href="#">Terms</a>
+                <a href="#">Directory</a>
+                <a href="#">Profiles</a>
+                <a href="#">Hashtags</a>
+                <a href="#">Language</a>
+                <div class="text-small">
+                    @ 2022 Instagram
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
