--- a/signup.html
+++ b/signup.html
@@ -4,21 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Sujeitogram - Sua rede social</title>
+    <title>Faça seu cadastro - Sujeitogram</title>
 </head>
 <body>
     <div id="wrapper">
-        <div id="container">
-            <div class="column left">
-                <div class="main">
-                    
-                </div>
-            </div>
+        <div id="container-signup">
             <div class="column right">
                 <div class="login-panel">
                     <div class="logo">
                         <img class="logo-img" src="./assets/logo.png" alt="Logo do sujeitogram">
                     </div>
+                    <div class="message">
+                        <span>Cadastre-se para ver fotos e vídeos dos seus amigos.</span>
+                    </div>
+                    <button class="cta-button">Entrar com Facebook</button>
                     <form>
                         <input type="text" name="username" placeholder="Telefone, usuário ou email">
                         <input type="password" name="password" placeholder="Senha">
@@ -28,7 +27,7 @@
                 </div>
 
                 <div class="infobox">
-                    <p>Não possui uma conta? <a href="./signup.html">Cadastre-se</a></p>
+                    <p>Não possui uma conta? <a href="#">Cadastre-se</a></p>
                 </div>
 
                 <div class="get-app-panel">
