Implemts signup css

--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
     <div id="wrapper">
         <div id="container-signup">
-            <div class="column right">
+            <div class="column">
                 <div class="login-panel">
                     <div class="logo">
                         <img class="logo-img" src="./assets/logo.png" alt="Logo do sujeitogram">
@@ -18,8 +18,15 @@
                         <span>Cadastre-se para ver fotos e vídeos dos seus amigos.</span>
                     </div>
                     <button class="cta-button">Entrar com Facebook</button>
+                    <div class="divisor-container">
+                        <div class="line"></div>
+                        <div class="divisor-tag">ou</div>
+                        <div class="line"></div>
+                    </div>
                     <form>
-                        <input type="text" name="username" placeholder="Telefone, usuário ou email">
+                        <input type="text" name="email" placeholder="Numero de celular ou email">
+                        <input type="text" name="name" placeholder="Nome completo">
+                        <input type="text" name="username" placeholder="Nome do usuario">
                         <input type="password" name="password" placeholder="Senha">
 
                         <input type="submit" value="Entrar">
@@ -27,7 +34,7 @@
                 </div>
 
                 <div class="infobox">
-                    <p>Não possui uma conta? <a href="#">Cadastre-se</a></p>
+                    <p>Tem uma conta? <a href="./index.html">Conecte-se</a></p>
                 </div>
 
                 <div class="get-app-panel">
@@ -57,6 +64,6 @@
                 </div>
             </div>
         </footer>
-    </div>
+    </div>  
 </body>
 </html>
